--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
         {
             "src": "index.js",
-            "use": "@now/node"
+            "use": "@now/node",
+            "config": { "maxLambdaSize": "50mb" }
         }
     ],
     "routes": [
